--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <div class="contenedor">
             <nav class="menu">
                 <a href="#">Inicio</a>
-                <a href="desayunos.html">Desayunos</a>
-                <a href="comidas.html">Comidas</a>
-                <a href="cenas.html">Cenas</a>
-                <a href="postres.html">Postres</a>
+                <a href="vista/desayunos.html">Desayunos</a>
+                <a href="vista/comidas.html">Comidas</a>
+                <a href="vista/cenas.html">Cenas</a>
+                <a href="vista/postres.html">Postres</a>
             </nav>
             <div class="contenido-header">
-                <h1 class="titulo-header">Recetas de Ratatouille</h1>
+                <h1 class="titulo-header">Restaurante H & T</h1>
                 <span class="linea-header"></span>
-                <h2 class="texto-header">Deliciosas recetas de cocina para todos <br>los gustos y ocasiones<span class="desaparecer">. Explora nuestras categorías y descubre nuevos platillos.</span></h2>
+                <h2 class="texto-header">El restaurante con mas clase desde el 69'. <br>Pase a degustar nuestro platillos<span class="desaparecer">. Explora nuestras recetas y descubre nuevos platillos.</span></h2>
                 <a href="#" class="action-header">Explorar Recetas</a>
             </div>
         </div>
@@ -169,31 +169,31 @@
             <div class="info-container">
                 <div class="info-container-data">
                     <div class="footer-contactanos">
-                        <a href="contacto.html" class="contactanos-link">Contáctanos a nuestro correo electrónico</a>
+                        <a href="vista/contacto.html" class="contactanos-link">Contáctanos a nuestro correo electrónico</a>
                     </div>
                     <ul class="social-icons">
                         <li>
-                            <a href="https://x.com/FoxySumi?t=Gus9AYQb5HXb-33Kj4zYrA&s=09" aria-label="Twitter">
+                            <a href="https://x.com/oriolcastro?lang=es" aria-label="Twitter">
                                 <img src="https://cdn-cashy-static-assets.lucidchart.com/marketing/pages/chart/Footer/twitter-x-logo-black.svg" alt="Twitter" class="icon-image">
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/andree0802_?igsh=YmM1bmFkY2FicHRw" aria-label="Instagram">
+                            <a href="https://www.instagram.com/craftleonel/?hl=es" aria-label="Instagram">
                                 <img src="https://cdn-cashy-static-assets.lucidchart.com/marketing/pages/chart/footer/instagram-black.svg" alt="Instagram" class="icon-image">
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/andres.sumi.33?mibextid=ZbWKwL" aria-label="Facebook">
+                            <a href="https://www.facebook.com/dom.bert.52?locale=es_LA" aria-label="Facebook">
                                 <img src="https://cdn-cashy-static-assets.lucidchart.com/marketing/pages/chart/footer/facebook-black.svg" alt="Facebook" class="icon-image">
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/watch?v=FvOpPeKSf_4" aria-label="YouTube">
+                            <a href="https://www.youtube.com/@dombertgamer2242" aria-label="YouTube">
                                 <img src="https://cdn-cashy-static-assets.lucidchart.com/marketing/pages/chart/footer/youtube-black.svg" alt="YouTube" class="icon-image">
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.tiktok.com/@andree0802_?_t=8rlDfe5MrSx&_r=1" aria-label="TikTok">
+                            <a href="https://www.tiktok.com/@gonel_yt" aria-label="TikTok">
                                 <img src="https://cdn-cashy-static-assets.lucidchart.com/marketing/pages/chart/Footer/TikTok-Social-logo-Black.svg" alt="TikTok" class="icon-image">
                             </a>
                         </li>
@@ -211,7 +211,7 @@
             <p class="copyright">
                 <span aria-hidden="true">&copy;</span>
                 <span class="sr-only">Copyright</span>
-                2024 TiagoandHerbert S.A.
+                2025 H & T Industries S.A.
             </p>
         </div>
     </footer>
